[DANIL] mobile edit

--- a/src/app/_dialog/dialog-registration/dialog-registration.component.html
+++ b/src/app/_dialog/dialog-registration/dialog-registration.component.html
@@ -57,7 +57,8 @@
     <div class="text-center">
       <div class="captcha">
         <!--<re-captcha site_key="6Lfc51AUAAAAAJ300SFIWTq0vij-jtxbxomKE0et"></re-captcha>-->
-        <re-captcha (captchaResponse)="handleCorrectCaptcha($event)" site_key="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></re-captcha>
+        <!--<re-captcha (captchaResponse)="handleCorrectCaptcha($event)" site_key="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></re-captcha>-->
+        <re-captcha site_key="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></re-captcha>
       </div>
     </div>
 
