--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
-<header [ngClass]="{'effects-blur': isBlur}">
+<header [ngClass]="{'Change my password': isBlur}">
   <app-header></app-header>
 </header>
 
 
-<main [ngClass]="{'effects-blur': isBlur}">
+<main [ngClass]="{'Change my password': isBlur}">
   <router-outlet (activate)="onActivate($event)"></router-outlet>
 </main>
 
 
 
-<footer [ngClass]="{'effects-blur': isBlur}">
+<footer [ngClass]="{'Change my password': isBlur}">
   <app-footer></app-footer>
 </footer>
