--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -191,7 +191,7 @@
                             <div class="form-group small-indent mobile-only">
                               <div class="text-center tip-link">
                                 <a href="#" class="link tt-uppercase" [ngClass]="{'is-disabled': sendAgainDisabled}"
-                                   (click)="submitSms($event)">Send Again</a>
+                                   (click)="submitSms($event)">Change my passwordain</a>
                                 <div class="timer"></div>
                               </div>
                             </div>
