--- a/src/assets/sass/footer.sass
+++ b/src/assets/sass/footer.sass
@@ -2,7 +2,7 @@
 
 // footer
 .footer
-  background-color: $bgAccentSecond
+  background-color: #1B2C58
   font-family: $serif
   padding: 5.3rem 0
   border-top: 20px solid #D2A884
