--- a/src/app/_exchange/step1-1/step1-1.component.html
+++ b/src/app/_exchange/step1-1/step1-1.component.html
@@ -1,7 +1,7 @@
 <div class="step">
   <div class="step-title"><h3 class="h3">2. Login or registration</h3></div>
 
-  <p class="p_small" [innerHTML]="'exchange.ProcessLogin' | translate">
+  <p class="p_small" [innerHTML]="'exchange.ProcessLoginOffer' | translate">
   </p>
 
   <div class="reduced-width">
