--- a/src/app/_user/user-activate/user-activate.component.html
+++ b/src/app/_user/user-activate/user-activate.component.html
@@ -3,14 +3,14 @@
 
     <div class="container">
       <header class="content__header">
-        <div class="title greenColor"><h1 class="h1">Account Activated Successfully</h1></div>
+        <div class="title"><h1 class="h1">Account Activated Successfully</h1></div>
 
         <div class="sub-title">
           <p class="p_large">You have successfully activated your account! Please go to the exchange page.</p>
         </div>
         <br>
         <div class="text-center tip-link">
-          <a routerLink="/home" class="link tt-uppercase">Go to home</a>
+          <a routerLink="/home" class="link tt-uppercase sans-serif">Go to home</a>
         </div>
       </header>
     </div>
@@ -19,7 +19,7 @@
   <div class="fadeIn animated" *ngIf="userActivateError">
     <div class="container">
       <header class="content__header">
-        <div class="title redColor"><h1 class="h1">Error account activation</h1></div>
+        <div class="title"><h1 class="h1">Error account activation</h1></div>
 
         <div class="sub-title">
           <p class="p_large">Unfortunately, there was a mistake! The account could not be activated. Try again or after
@@ -27,7 +27,7 @@
         </div>
         <br>
         <div class="text-center tip-link">
-          <a routerLink="/home" class="link tt-uppercase">Go to home</a>
+          <a routerLink="/home" class="link tt-uppercase sans-serif">Go to home</a>
         </div>
       </header>
     </div>
