--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -1885,9 +1885,9 @@ hr
 				border-color: $errorColor
 .checkbox-success
   .checkbox-icons
-    border-color: #8EC343
+    border-color: #2F4171
     &:after
-      border-color: #8EC343
+      border-color: #2F4171
 .rtl
   direction: rtl
 
