--- a/src/app/_exchange/step3-4/step3-4.component.html
+++ b/src/app/_exchange/step3-4/step3-4.component.html
@@ -56,7 +56,7 @@
           </svg>
         </div>
         <button type="submit" class="btn btn-accent rippler rippler-default" *ngIf="!userModel.verification_image" [disabled]="idCardForm.invalid && ngIdCardForm.submitted">Upload ID</button>
-        <button type="submit" class="btn btn-accentSecond rippler rippler-default" *ngIf="userModel.verification_image" (click)="goToNext($event)">Next</button>
+        <button type="submit" class="btn btn-accent rippler rippler-default" *ngIf="userModel.verification_image" (click)="goToNext($event)">Next</button>
       </label>
     </div>
   </form>
