--- a/src/app/table-history/table-history.component.html
+++ b/src/app/table-history/table-history.component.html
@@ -2,11 +2,10 @@
   <div class="container">
 
     <header class="content__header">
-      <div class="title"><h1 class="h1">Transaction History</h1></div>
+      <div class="title"><h1 class="h1">{{ 'Testimonials.title' | translate }}</h1></div>
 
       <div class="sub-title">
-        <p class="p_large pre-line">Co o nás říkají naši spokojení zákazníci?
-          Podívejte se na hodnocení transakcí, které nám zanechali.</p>
+        <p class="p_large pre-line" [innerHTML]="'Testimonials.subtitle' | translate"></p>
       </div>
 
 
@@ -14,8 +13,7 @@
         <img src="../assets/img/satisfaction_guarantee.png" alt="" class="img-left">
         <div class="gratitude-text">
           <hr>
-          <h2 class="h2 pre-line">Více než <span class="accentColor">4,149 zákazníků</span> nám zanechalo
-            hodnocení <span class="accentColor">5/5 hvězd</span>. Děkujeme.</h2>
+          <h2 class="h2 pre-line" [innerHTML]="'Testimonials.gratitude' | translate"></h2>
         </div>
         <img src="../assets/img/green_shield_check_protected_checked.png" alt="" class="img-right">
       </div>
