--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -1885,7 +1885,7 @@ hr
 				border-color: $errorColor
 .checkbox-success
   .checkbox-icons
-    border-color: #2F4171
+    border-color: #B7BECE
     &:after
       border-color: #2F4171
 .rtl
