--- a/src/app/_dialog/dialog-registration/dialog-registration.component.html
+++ b/src/app/_dialog/dialog-registration/dialog-registration.component.html
@@ -1,9 +1,6 @@
 <div id="medium-dialog" class="popup popup-user blank tape-top ">
   <div class="popup-title">
-    <h2 class="h2 text-center">Registration.</h2>
-  </div>
-  <div class="popup-subtitle">
-    <p class="p_middle mobile-small">Stav transakce můžete <b>sledovat</b> přes tento <b>odkaz</b>.</p>
+    <h2 class="h2 text-center">Registration</h2>
   </div>
 
   <form action="#" class="form" [ngClass]="{'custom-loader disabled': loading}"  [formGroup]="userRegistrForm" (submit)="submit($event)"  #regForm="ngForm" novalidate>
